gen/MyParser.py
# Generated from MyParser.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class MyParser ( Parser ):

    grammarFileName = "MyParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'/*'", "'*/'" ]

    symbolicNames = [ "<INVALID>", "KEYWORD", "LINE_COMMENT", "BLOCK_COMMENT_START", 
                      "WS", "STRING_SINGLE", "STRING_DOUBLE", "HEX_STRING", 
                      "BIT_STRING", "BRACKET_IDENTIFIER", "VARIABLE", "IDENTIFIER", 
                      "NUMBER", "OPERATOR", "PUNCTUATION", "COMMENT_OPEN", 
                      "COMMENT_CLOSE", "COMMENT_TEXT" ]

    RULE_sqlScript = 0
    RULE_statementList = 1
    RULE_statement = 2
    RULE_goStatement = 3
    RULE_createTableStatement = 4
    RULE_tableName = 5
    RULE_columnDefinitionList = 6
    RULE_columnDefinition = 7
    RULE_columnName = 8
    RULE_dataType = 9
    RULE_columnConstraint = 10
    RULE_alterTableStatement = 11
    RULE_addColumnClause = 12
    RULE_deleteStatement = 13
    RULE_dropConstraintClause = 14
    RULE_constraintName = 15
    RULE_updateStatement = 16
    RULE_assignmentList = 17
    RULE_assignment = 18
    RULE_whereClause = 19
    RULE_tryCatchStatement = 20
    RULE_insertStatement = 21
    RULE_insertColumns = 22
    RULE_insertValues = 23
    RULE_ifStatement = 24
    RULE_blockStatement = 25
    RULE_declareStatement = 26
    RULE_setStatement = 27
    RULE_execStatement = 28
    RULE_selectStatement = 29
    RULE_orderByClause = 30
    RULE_orderByItem = 31
    RULE_selectList = 32
    RULE_selectItem = 33
    RULE_fromClause = 34
    RULE_tableSource = 35
    RULE_expression = 36
    RULE_expressionList = 37
    RULE_caseExpression = 38
    RULE_whenClause = 39
    RULE_elseClause = 40
    RULE_condition = 41
    RULE_columnReference = 42
    RULE_functionCall = 43
    RULE_literal = 44

    ruleNames =  [ "sqlScript", "statementList", "statement", "goStatement", 
                   "createTableStatement", "tableName", "columnDefinitionList", 
                   "columnDefinition", "columnName", "dataType", "columnConstraint", 
                   "alterTableStatement", "addColumnClause", "deleteStatement", 
                   "dropConstraintClause", "constraintName", "updateStatement", 
                   "assignmentList", "assignment", "whereClause", "tryCatchStatement", 
                   "insertStatement", "insertColumns", "insertValues", "ifStatement", 
                   "blockStatement", "declareStatement", "setStatement", 
                   "execStatement", "selectStatement", "orderByClause", 
                   "orderByItem", "selectList", "selectItem", "fromClause", 
                   "tableSource", "expression", "expressionList", "caseExpression", 
                   "whenClause", "elseClause", "condition", "columnReference", 
                   "functionCall", "literal" ]

    EOF = Token.EOF
    KEYWORD=1
    LINE_COMMENT=2
    BLOCK_COMMENT_START=3
    WS=4
    STRING_SINGLE=5
    STRING_DOUBLE=6
    HEX_STRING=7
    BIT_STRING=8
    BRACKET_IDENTIFIER=9
    VARIABLE=10
    IDENTIFIER=11
    NUMBER=12
    OPERATOR=13
    PUNCTUATION=14
    COMMENT_OPEN=15
    COMMENT_CLOSE=16
    COMMENT_TEXT=17

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class SqlScriptContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statementList(self):
            return self.getTypedRuleContext(MyParser.StatementListContext,0)


        def EOF(self):
            return self.getToken(MyParser.EOF, 0)

        def getRuleIndex(self):
            return MyParser.RULE_sqlScript

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSqlScript" ):
                listener.enterSqlScript(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSqlScript" ):
                listener.exitSqlScript(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSqlScript" ):
                return visitor.visitSqlScript(self)
            else:
                return visitor.visitChildren(self)




    def sqlScript(self):

        localctx = MyParser.SqlScriptContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_sqlScript)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 90
            self.statementList()
            self.state = 91
            self.match(MyParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MyParser.StatementContext)
            else:
                return self.getTypedRuleContext(MyParser.StatementContext,i)


        def PUNCTUATION(self, i:int=None):
            if i is None:
                return self.getTokens(MyParser.PUNCTUATION)
            else:
                return self.getToken(MyParser.PUNCTUATION, i)

        def getRuleIndex(self):
            return MyParser.RULE_statementList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatementList" ):
                listener.enterStatementList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatementList" ):
                listener.exitStatementList(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatementList" ):
                return visitor.visitStatementList(self)
            else:
                return visitor.visitChildren(self)




    def statementList(self):

        localctx = MyParser.StatementListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statementList)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 99
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,1,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 93
                    self.statement()
                    self.state = 95
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
                    if la_ == 1:
                        self.state = 94
                        self.match(MyParser.PUNCTUATION)

             
                self.state = 101
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,1,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def createTableStatement(self):
            return self.getTypedRuleContext(MyParser.CreateTableStatementContext,0)


        def alterTableStatement(self):
            return self.getTypedRuleContext(MyParser.AlterTableStatementContext,0)


        def updateStatement(self):
            return self.getTypedRuleContext(MyParser.UpdateStatementContext,0)


        def declareStatement(self):
            return self.getTypedRuleContext(MyParser.DeclareStatementContext,0)


        def setStatement(self):
            return self.getTypedRuleContext(MyParser.SetStatementContext,0)


        def ifStatement(self):
            return self.getTypedRuleContext(MyParser.IfStatementContext,0)


        def tryCatchStatement(self):
            return self.getTypedRuleContext(MyParser.TryCatchStatementContext,0)


        def blockStatement(self):
            return self.getTypedRuleContext(MyParser.BlockStatementContext,0)


        def insertStatement(self):
            return self.getTypedRuleContext(MyParser.InsertStatementContext,0)


        def selectStatement(self):
            return self.getTypedRuleContext(MyParser.SelectStatementContext,0)


        def deleteStatement(self):
            return self.getTypedRuleContext(MyParser.DeleteStatementContext,0)


        def execStatement(self):
            return self.getTypedRuleContext(MyParser.ExecStatementContext,0)


        def goStatement(self):
            return self.getTypedRuleContext(MyParser.GoStatementContext,0)


        def PUNCTUATION(self):
            return self.getToken(MyParser.PUNCTUATION, 0)

        def getRuleIndex(self):
            return MyParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = MyParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_statement)
        try:
            self.state = 116
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 102
                self.createTableStatement()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 103
                self.alterTableStatement()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 104
                self.updateStatement()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 105
                self.declareStatement()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 106
                self.setStatement()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 107
                self.ifStatement()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 108
                self.tryCatchStatement()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 109
                self.blockStatement()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 110
                self.insertStatement()
                pass

            elif la_ == 10:
                self.enterOuterAlt(localctx, 10)
                self.state = 111
                self.selectStatement()
                pass

            elif la_ == 11:
                self.enterOuterAlt(localctx, 11)
                self.state = 112
                self.deleteStatement()
                pass

            elif la_ == 12:
                self.enterOuterAlt(localctx, 12)
                self.state = 113
                self.execStatement()
                pass

            elif la_ == 13:
                self.enterOuterAlt(localctx, 13)
                self.state = 114
                self.goStatement()
                pass

            elif la_ == 14:
                self.enterOuterAlt(localctx, 14)
                self.state = 115
                self.match(MyParser.PUNCTUATION)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class GoStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def KEYWORD(self):
            return self.getToken(MyParser.KEYWORD, 0)

        def getRuleIndex(self):
            return MyParser.RULE_goStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGoStatement" ):
                listener.enterGoStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGoStatement" ):
                listener.exitGoStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitGoStatement" ):
                return visitor.visitGoStatement(self)
            else:
                return visitor.visitChildren(self)




    def goStatement(self):

        localctx = MyParser.GoStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_goStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 118
            self.match(MyParser.KEYWORD)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CreateTableStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def KEYWORD(self, i:int=None):
            if i is None:
                return self.getTokens(MyParser.KEYWORD)
            else:
                return self.getToken(MyParser.KEYWORD, i)

        def tableName(self):
            return self.getTypedRuleContext(MyParser.TableNameContext,0)


        def PUNCTUATION(self, i:int=None):
            if i is None:
                return self.getTokens(MyParser.PUNCTUATION)
            else:
                return self.getToken(MyParser.PUNCTUATION, i)

        def columnDefinitionList(self):
            return self.getTypedRuleContext(MyParser.ColumnDefinitionListContext,0)


        def getRuleIndex(self):
            return MyParser.RULE_createTableStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCreateTableStatement" ):
                listener.enterCreateTableStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCreateTableStatement" ):
                listener.exitCreateTableStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCreateTableStatement" ):
                return visitor.visitCreateTableStatement(self)
            else:
                return visitor.visitChildren(self)




    def createTableStatement(self):

        localctx = MyParser.CreateTableStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_createTableStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 120
            self.match(MyParser.KEYWORD)
            self.state = 121
            self.match(MyParser.KEYWORD)
            self.state = 122
            self.tableName()
            self.state = 123
            self.match(MyParser.PUNCTUATION)
            self.state = 124
            self.columnDefinitionList()
            self.state = 125
            self.match(MyParser.PUNCTUATION)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TableNameContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self, i:int=None):
            if i is None:
                return self.getTokens(MyParser.IDENTIFIER)
            else:
                return self.getToken(MyParser.IDENTIFIER, i)

        def PUNCTUATION(self):
            return self.getToken(MyParser.PUNCTUATION, 0)

        def BRACKET_IDENTIFIER(self):
            return self.getToken(MyParser.BRACKET_IDENTIFIER, 0)

        def getRuleIndex(self):
            return MyParser.RULE_tableName

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTableName" ):
                listener.enterTableName(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTableName" ):
                listener.exitTableName(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTableName" ):
                return visitor.visitTableName(self)
            else:
                return visitor.visitChildren(self)




    def tableName(self):

        localctx = MyParser.TableNameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_tableName)
        try:
            self.state = 134
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 129
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
                if la_ == 1:
                    self.state = 127
                    self.match(MyParser.IDENTIFIER)
                    self.state = 128
                    self.match(MyParser.PUNCTUATION)


                self.state = 131
                self.match(MyParser.IDENTIFIER)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 132
                self.match(MyParser.BRACKET_IDENTIFIER)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 133
                self.match(MyParser.IDENTIFIER)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ColumnDefinitionListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def columnDefinition(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MyParser.ColumnDefinitionContext)
            else:
                return self.getTypedRuleContext(MyParser.ColumnDefinitionContext,i)


        def PUNCTUATION(self, i:int=None):
            if i is None:
                return self.getTokens(MyParser.PUNCTUATION)
            else:
                return self.getToken(MyParser.PUNCTUATION, i)

        def getRuleIndex(self):
            return MyParser.RULE_columnDefinitionList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterColumnDefinitionList" ):
                listener.enterColumnDefinitionList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitColumnDefinitionList" ):
                listener.exitColumnDefinitionList(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitColumnDefinitionList" ):
                return visitor.visitColumnDefinitionList(self)
            else:
                return visitor.visitChildren(self)




    def columnDefinitionList(self):

        localctx = MyParser.ColumnDefinitionListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_columnDefinitionList)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 136
            self.columnDefinition()
            self.state = 141
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,5,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 137
                    self.match(MyParser.PUNCTUATION)
                    self.state = 138
                    self.columnDefinition() 
                self.state = 143
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,5,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ColumnDefinitionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def columnName(self):
            return self.getTypedRuleContext(MyParser.ColumnNameContext,0)


        def dataType(self):
            return self.getTypedRuleContext(MyParser.DataTypeContext,0)


        def columnConstraint(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MyParser.ColumnConstraintContext)
            else:
                return self.getTypedRuleContext(MyParser.ColumnConstraintContext,i)


        def getRuleIndex(self):
            return MyParser.RULE_columnDefinition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterColumnDefinition" ):
                listener.enterColumnDefinition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitColumnDefinition" ):
                listener.exitColumnDefinition(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitColumnDefinition" ):
                return visitor.visitColumnDefinition(self)
            else:
                return visitor.visitChildren(self)




    def columnDefinition(self):

        localctx = MyParser.ColumnDefinitionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_columnDefinition)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 144
            self.columnName()
            self.state = 145
            self.dataType()
            self.state = 149
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,6,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 146
                    self.columnConstraint() 
                self.state = 151
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,6,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ColumnNameContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(MyParser.IDENTIFIER, 0)

        def BRACKET_IDENTIFIER(self):
            return self.getToken(MyParser.BRACKET_IDENTIFIER, 0)

        def getRuleIndex(self):
            return MyParser.RULE_columnName

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterColumnName" ):
                listener.enterColumnName(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitColumnName" ):
                listener.exitColumnName(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitColumnName" ):
                return visitor.visitColumnName(self)
            else:
                return visitor.visitChildren(self)




    def columnName(self):

        localctx = MyParser.ColumnNameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_columnName)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 152
            _la = self._input.LA(1)
            if not(_la==9 or _la==11):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DataTypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def KEYWORD(self):
            return self.getToken(MyParser.KEYWORD, 0)

        def PUNCTUATION(self, i:int=None):
            if i is None:
                return self.getTokens(MyParser.PUNCTUATION)
            else:
                return self.getToken(MyParser.PUNCTUATION, i)

        def NUMBER(self):
            return self.getToken(MyParser.NUMBER, 0)

        def IDENTIFIER(self):
            return self.getToken(MyParser.IDENTIFIER, 0)

        def getRuleIndex(self):
            return MyParser.RULE_dataType

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDataType" ):
                listener.enterDataType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDataType" ):
                listener.exitDataType(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDataType" ):
                return visitor.visitDataType(self)
            else:
                return visitor.visitChildren(self)




    def dataType(self):

        localctx = MyParser.DataTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_dataType)
        try:
            self.state = 166
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1]:
                self.enterOuterAlt(localctx, 1)
                self.state = 154
                self.match(MyParser.KEYWORD)
                self.state = 158
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
                if la_ == 1:
                    self.state = 155
                    self.match(MyParser.PUNCTUATION)
                    self.state = 156
                    self.match(MyParser.NUMBER)
                    self.state = 157
                    self.match(MyParser.PUNCTUATION)


                pass
            elif token in [11]:
                self.enterOuterAlt(localctx, 2)
                self.state = 160
                self.match(MyParser.IDENTIFIER)
                self.state = 164
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
                if la_ == 1:
                    self.state = 161
                    self.match(MyParser.PUNCTUATION)
                    self.state = 162
                    self.match(MyParser.NUMBER)
                    self.state = 163
                    self.match(MyParser.PUNCTUATION)


                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ColumnConstraintContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def KEYWORD(self, i:int=None):
            if i is None:
                return self.getTokens(MyParser.KEYWORD)
            else:
                return self.getToken(MyParser.KEYWORD, i)

        def getRuleIndex(self):
            return MyParser.RULE_columnConstraint

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterColumnConstraint" ):
                listener.enterColumnConstraint(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitColumnConstraint" ):
                listener.exitColumnConstraint(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitColumnConstraint" ):
                return visitor.visitColumnConstraint(self)
            else:
                return visitor.visitChildren(self)




    def columnConstraint(self):

        localctx = MyParser.ColumnConstraintContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_columnConstraint)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 168
            self.match(MyParser.KEYWORD)
            self.state = 170
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
            if la_ == 1:
                self.state = 169
                self.match(MyParser.KEYWORD)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AlterTableStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def KEYWORD(self, i:int=None):
            if i is None:
                return self.getTokens(MyParser.KEYWORD)
            else:
                return self.getToken(MyParser.KEYWORD, i)

        def tableName(self):
            return self.getTypedRuleContext(MyParser.TableNameContext,0)


        def addColumnClause(self):
            return self.getTypedRuleContext(MyParser.AddColumnClauseContext,0)


        def dropConstraintClause(self):
            return self.getTypedRuleContext(MyParser.DropConstraintClauseContext,0)


        def getRuleIndex(self):
            return MyParser.RULE_alterTableStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAlterTableStatement" ):
                listener.enterAlterTableStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAlterTableStatement" ):
                listener.exitAlterTableStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAlterTableStatement" ):
                return visitor.visitAlterTableStatement(self)
            else:
                return visitor.visitChildren(self)




    def alterTableStatement(self):

        localctx = MyParser.AlterTableStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_alterTableStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 172
            self.match(MyParser.KEYWORD)
            self.state = 173
            self.match(MyParser.KEYWORD)
            self.state = 174
            self.tableName()
            self.state = 177
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,11,self._ctx)
            if la_ == 1:
                self.state = 175
                self.addColumnClause()
                pass
